--- a/48.html
+++ b/48.html
@@ -68,18 +68,18 @@
         <div class="w-100" style="padding-left: 2.778%; padding-right: 2.778%; padding-top: 24px; padding-bottom: 24px;">
             <div class="col-sm-12 d-flex p-0">
                 <div class="col-sm-3 p-0">
-                    <div class="w-100 bg-white" style="min-height: 754px; padding-top: 30px; border-radius: 10px; position: relative; box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.03);">
+                    <div class="w-100 bg-white" style="min-height: 754px; min-width: 190px; padding-top: 30px; border-radius: 10px; position: relative; box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.03);">
                         <div class="container-fluid m-0 p-0 px-5 text-center" style="margin-top: 20px !important; margin-bottom: 50px !important;" id="qr-code">
                             <img src="./img/48/Vector (2).png" class="img-fluid" />
                         </div>
                         <nav class="navbar w-100 p-0 qr-sidebar" style="overflow-x: hidden;">
-                            <div class="w-100 d-flex" style="padding-left: 9%; padding-right: 9%;" id="Informations-générales-link">
+                            <div class="w-100 d-flex active" style="padding-left: 9%; padding-right: 9%;" id="Informations-générales-link">
                                 <div style="margin-right: 5.491%;"><input class="checkbox" type="checkbox"></div>
                                 <div style="margin-right: 4.913%;">
                                     <img src="./img/48/Folder.png" class="blue-img" style="width: 19.2px; height: 19.17px; display: none;" />
                                     <img src="./img/48/Folder (1).png" class="black-img" style="width: 19.2px; height: 19.17px;" />
                                 </div>
-                                <div class="fs-12 fw-500" style="min-width:112px;">01- Informations générales</div>
+                                <div class="fs-12 fw-500" style="min-width:117px;">01- Informations générales</div>
                             </div>
                             <div class="w-100 d-flex" style="padding-left: 9%; padding-right: 9%;" id="Identification-des-dangers-link">
                                 <div style="margin-right: 5.491%;"><input class="checkbox" type="checkbox"></div>
@@ -87,7 +87,7 @@
                                     <img src="./img/48/Folder.png" class="blue-img" style="width: 19.2px; height: 19.17px; display: none;" />
                                     <img src="./img/48/Folder (1).png" class="black-img" style="width: 19.2px; height: 19.17px;" />
                                 </div>
-                                <div class="fs-12 fw-500" style="min-width:112px;">02- Identification des dangers</div>
+                                <div class="fs-12 fw-500" style="min-width:117px;">02- Identification des dangers</div>
                             </div>
                             <div class="w-100 d-flex Mesure-de-Protection-link" style="padding-left: 9%; padding-right: 9%;" id="Mesure-de-Protection-link">
                                 <div style="margin-right: 5.491%;"><input class="checkbox" type="checkbox"></div>
@@ -95,7 +95,7 @@
                                     <img src="./img/48/Folder.png" class="blue-img" style="width: 19.2px; height: 19.17px; display: none;" />
                                     <img src="./img/48/Folder (1).png" class="black-img" style="width: 19.2px; height: 19.17px;" />
                                 </div>
-                                <div class="fs-12 fw-500" style="min-width:112px;">03- Mesure de Protection</div>
+                                <div class="fs-12 fw-500" style="min-width:117px;">03- Mesure de Protection</div>
                             </div>
                             <nav class="w-100 navbar p-0 qr-sidebar" id="Mesure-de-Protection-sublinks">
                                 <div class="w-100 active" style="padding-left: 9%; padding-right: 9%;" id="Consignation-des-énergies-link">
@@ -169,7 +169,7 @@
                                     <img src="./img/48/Folder.png" class="blue-img" style="width: 19.2px; height: 19.17px; display: none;" />
                                     <img src="./img/48/Folder (1).png" class="black-img" style="width: 19.2px; height: 19.17px;" />
                                 </div>
-                                <div class="fs-12 fw-500" style="min-width:112px;">04- Equipement de protection</div>
+                                <div class="fs-12 fw-500" style="min-width:117px;">04- Equipement de protection</div>
                             </div>
                             <div class="w-100 d-flex" style="padding-left: 9%; padding-right: 9%;" id="Autre-document-obligatoire-link">
                                 <div style="margin-right: 5.491%;"><input class="checkbox" type="checkbox"></div>
@@ -177,15 +177,15 @@
                                     <img src="./img/48/Folder.png" class="blue-img" style="width: 19.2px; height: 19.17px; display: none;" />
                                     <img src="./img/48/Folder (1).png" class="black-img" style="width: 19.2px; height: 19.17px;" />
                                 </div>
-                                <div class="fs-12 fw-500" style="min-width:112px;">05- Autre document obligatoire</div>
+                                <div class="fs-12 fw-500" style="min-width:117px;">05- Autre document obligatoire</div>
                             </div>
-                            <div class="w-100 d-flex active" style="padding-left: 9%; padding-right: 9%;" id="Remarque-Signature-link">
+                            <div class="w-100 d-flex" style="padding-left: 9%; padding-right: 9%;" id="Remarque-Signature-link">
                                 <div style="margin-right: 5.491%;"><input class="checkbox" type="checkbox"></div>
                                 <div style="margin-right: 4.913%;">
                                     <img src="./img/48/Folder.png" class="blue-img" style="width: 19.2px; height: 19.17px; display: none;" />
                                     <img src="./img/48/Folder (1).png" class="black-img" style="width: 19.2px; height: 19.17px;" />
                                 </div>
-                                <div class="fs-12 fw-500" style="min-width:112px;">06- Remarque & Signature</div>
+                                <div class="fs-12 fw-500" style="min-width:117px;">06- Remarque & Signature</div>
                             </div>
                         </nav>
                         <nav class="navbar p-0" style="left: 9.65%; right: 9.65%; bottom: 0; padding-bottom: 28px !important; position: absolute;">
@@ -1166,14 +1166,14 @@
                 $(this).addClass('active');
             });
 
-            $("#Informations-générales").hide();
+            $("#Informations-générales").show();
             $("#Identification-des-dangers").hide();
             $("#Mesure-de-Protection").hide();
             $("#Levage-de-charges").hide();
             $("#Equipement-de-protection").hide();
             $("#Mesure-de-Protection-sublinks").hide();
             $("#Autre-document-obligatoire").hide();
-            $("#Remarque-Signature").show();
+            $("#Remarque-Signature").hide();
             
             $("#Informations-générales-link").click(function(){
                 $("#Identification-des-dangers").hide();
