--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
       
+    <title>Utilisateur</title>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,12 +12,11 @@
     <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+        crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css" />
 
-    <title>Utilisateur</title>
   </head>
 
   <body style="background: #F7F8FA;" style="overflow: scroll;" id="style-2">
@@ -109,9 +110,9 @@
                                 Permis de work
                             </nav>
 
-                            <nav class="row navbar p-0 m-0">
-                                <div style="margin-top: 23px !important; width: 17.789%; height: 162px; background-color: white; border-radius: 10px;">
-                                    <div style="margin: 7.282%;">
+                            <div class="row m-0" style="margin-right: -22px !important;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1039.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #2697FF;">76</div>
@@ -120,8 +121,8 @@
                                         <div class="fw-400 fs-18" style="width: 131px;">Permis de travail ouvert</div>
                                     </div>
                                 </div>
-                                <div style="margin-top: 23px !important; width: 17.789%; height: 162px; background-color: white; border-radius: 10px;">
-                                    <div style="margin: 7.282%;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1254.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #FFA113;">35</div>
@@ -130,8 +131,8 @@
                                         <div class="fw-400 fs-18" style="width: 131px;">Permis de travail ouvert</div>
                                     </div>
                                 </div>
-                                <div style="margin-top: 23px !important; width: 17.789%; height: 162px; background-color: white; border-radius: 10px;">
-                                    <div style="margin: 7.282%;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1257.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #13498A;">21</div>
@@ -140,8 +141,8 @@
                                         <div class="fw-400 fs-18" style="width: 131px;">Permis de travail ouvert</div>
                                     </div>
                                 </div>
-                                <div style="margin-top: 23px !important; width: 17.789%; height: 162px; background-color: white; border-radius: 10px;">
-                                    <div style="margin: 7.282%;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1260.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #2697FF;">124</div>
@@ -150,8 +151,8 @@
                                         <div class="fw-400 fs-18" style="width: 131px;">Permis de travail ouvert</div>
                                     </div>
                                 </div>
-                                <div style="margin-top: 23px !important; width: 17.789%; height: 162px; background-color: white; border-radius: 10px;">
-                                    <div style="margin: 7.282%;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1261.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #19E9AA;">124</div>
@@ -160,17 +161,17 @@
                                         <div class="fw-400 fs-18" style="width: 131px;">Permis de travail ouvert</div>
                                     </div>
                                 </div>
-                            </nav>
+                            </div>
 
                             <nav class="navbar p-0">
-                                <div style="width: 39.292%; margin-top: 29px !important; height: 100%; background-color: white; border-radius: 10px;" class="adjust-table">
+                                <div style="width: 39.292%; margin-top: 29px !important; background-color: white; border-radius: 10px;" class="adjust-table">
                                     <nav class="navbar" style="padding:30px 21px;">
                                         <div class="fw-400 fs-16 my-auto" style="color: #200E32; min-width: 150px;">Permis de travail récents</div>
                                         <div class="fs-13 fw-400" style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;">See more</div>
                                     </nav>
                                     <nav class="navbar pl-2 pr-2 p-0">
-                                        <div style="width: 100%;">
-                                            <table class="table tbl-even" style="min-width: 360px; height: 100%;">
+                                        <div style="width: 100%; overflow: auto;">
+                                            <table class="table tbl-even" style="min-width: 360px; height: 100%; max-height: 498px;">
                                                 <thead>
                                                     <tr class="fs-14 tc-grey fw-400">
                                                         <td>ID</td>
@@ -219,14 +220,14 @@
                                         </div>
                                     </nav>
                                 </div>
-                                <div style="width: 58.29%; margin-top: 29px !important; height: 100%; background-color: white; border-radius: 10px;" class="adjust-table">
+                                <div style="width: 58.29%; margin-top: 29px !important; background-color: white; border-radius: 10px;" class="adjust-table">
                                     <nav class="navbar" style="padding:30px 21px;">
                                         <div class="fw-400 fs-16 my-auto" style="color: #200E32; min-width: 150px;">Récentes observation</div>
                                         <div class="fs-13 fw-400" style="border: 1px solid #D1D1D1; box-sizing: border-box; border-radius: 4px; width: 95px; height: 33px; display: inline-flex; justify-content: center; align-items: center;">See more</div>
                                     </nav>
                                     <nav class="navbar pl-2 pr-2 p-0">
-                                        <div style="width: 100%;">
-                                            <table class="table tbl-even" style="height: 100%;">
+                                        <div style="width: 100%; overflow: auto;">
+                                            <table class="table tbl-even" style="height: 100%; max-height: 498px;">
                                                 <thead>
                                                     <tr class="fs-14 tc-grey fw-400">
                                                         <td>ID</td>
