--- a/43.html
+++ b/43.html
@@ -148,8 +148,8 @@
                     <div class="d-flex" style="justify-content: center; align-items: center; height: 100%;"><img src="./img/43/Plus.png" width="20" height="20" style="margin-right: 14px;" /><div class="text-white fs-14">Add New PTW</div></div>
                 </div>
             </nav>
-            <div style="width: 100%; margin-top: 24px;" class="scroll-adj" id="style-2">
-                <table class="tbl-43" style="min-width: 900px;">
+            <div style="width: 100%; margin-top: 24px; overflow: auto;" id="style-2">
+                <table class="tbl-43" style="min-width: 955px;">
                     <thead>
                         <tr>
                             <td><input class="checkbox" type="checkbox"></td>
