--- a/44.html
+++ b/44.html
@@ -172,8 +172,8 @@
                     <div class="d-flex" style="justify-content: center; align-items: center; height: 100%;"><img src="./img/43/Plus.png" width="20" height="20" style="margin-right: 14px;" /><div class="text-white fs-14">Add New PTW</div></div>
                 </div>
             </nav>
-            <div style="width: 100%; margin-top: 24px;" class="scroll-adj" id="style-2">
-                <table class="tbl-43" id="tbl-44">
+            <div style="width: 100%; margin-top: 24px; overflow: auto;" id="style-2">
+                <table class="tbl-43" id="tbl-44" style="min-width: 955px;">
                     <thead>
                         <tr>
                             <td><input class="checkbox" type="checkbox"></td>
@@ -392,31 +392,31 @@
                                             <tbody>
                                                 <tr>
                                                     <td>
-                                                        <div class="w-100 d-flex" style="height: 100%;">
-                                                            <div class="navbar p-0" style="width: 9.75%; height: 100%; background: #F7F8FA;">
-                                                                <div class="mx-auto my-auto" style="font-size: 7px; min-width: max-content; transform: rotate(-90deg);">Deuxième Jour</div>
-                                                            </div>
-                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%;">
+                                                        <div class="w-100 d-flex position-relative" style="height: 100%;">
+                                                            <div class="navbar p-0" style="min-width: 61px; height: 50%; background: #F7F8FA; align-items: center; text-align: center; position: absolute; left: -15px; top: 15px; bottom: 15px; transform: rotate(-90deg);">
+                                                                <div style="font-size: 7px; min-width: max-content; width: 100%;">Deuxième Jour</div>
+                                                            </div> 
+                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%; position: absolute; right: 0;">
                                                                 <div class="fs-10 text-center mx-auto my-auto" style="border-radius: 5px; background: #615EFF; color: white; padding: 7px; width: 67px; height: 26px;">Signer</div>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
-                                                        <div class="w-100 d-flex" style="height: 100%;">
-                                                            <div class="navbar p-0" style="width: 9.75%; height: 100%; background: #F7F8FA;">
-                                                                <div class="mx-auto my-auto" style="font-size: 7px; min-width: max-content; transform: rotate(-90deg);">Deuxième Jour</div>
-                                                            </div>
-                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%;">
+                                                        <div class="w-100 d-flex position-relative" style="height: 100%;">
+                                                            <div class="navbar p-0" style="min-width: 61px; height: 50%; background: #F7F8FA; align-items: center; text-align: center; position: absolute; left: -15px; top: 15px; bottom: 15px; transform: rotate(-90deg);">
+                                                                <div style="font-size: 7px; min-width: max-content; width: 100%;">Deuxième Jour</div>
+                                                            </div> 
+                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%; position: absolute; right: 0;">
                                                                 <div class="fs-10 text-center mx-auto my-auto" style="border-radius: 5px; background: rgba(209, 209, 209, 0.5); color: white; padding: 7px; width: 67px; height: 26px;">Signer</div>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
-                                                        <div class="w-100 d-flex" style="height: 100%;">
-                                                            <div class="navbar p-0" style="width: 9.75%; height: 100%; background: #F7F8FA;">
-                                                                <div class="mx-auto my-auto" style="font-size: 7px; min-width: max-content; transform: rotate(-90deg);">Deuxième Jour</div>
-                                                            </div>
-                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%;">
+                                                        <div class="w-100 d-flex position-relative" style="height: 100%;">
+                                                            <div class="navbar p-0" style="min-width: 61px; height: 50%; background: #F7F8FA; align-items: center; text-align: center; position: absolute; left: -15px; top: 15px; bottom: 15px; transform: rotate(-90deg);">
+                                                                <div style="font-size: 7px; min-width: max-content; width: 100%;">Deuxième Jour</div>
+                                                            </div> 
+                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%; position: absolute; right: 0;">
                                                                 <div class="fs-10 text-center mx-auto my-auto" style="border-radius: 5px; background: rgba(209, 209, 209, 0.5); color: white; padding: 7px; width: 67px; height: 26px;">Signer</div>
                                                             </div>
                                                         </div>
@@ -424,31 +424,31 @@
                                                 </tr>
                                                 <tr>
                                                     <td>
-                                                        <div class="w-100 d-flex" style="height: 100%;">
-                                                            <div class="navbar p-0" style="width: 9.75%; height: 100%; background: #F7F8FA;">
-                                                                <div class="mx-auto my-auto" style="font-size: 7px; min-width: max-content; transform: rotate(-90deg);">Deuxième Jour</div>
-                                                            </div>
-                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%;">
+                                                        <div class="w-100 d-flex position-relative" style="height: 100%;">
+                                                            <div class="navbar p-0" style="min-width: 61px; height: 50%; background: #F7F8FA; align-items: center; text-align: center; position: absolute; left: -15px; top: 15px; bottom: 15px; transform: rotate(-90deg);">
+                                                                <div style="font-size: 7px; min-width: max-content; width: 100%;">Deuxième Jour</div>
+                                                            </div> 
+                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%; position: absolute; right: 0;">
                                                                 <div class="fs-10 text-center mx-auto my-auto" style="border-radius: 5px; background: rgba(209, 209, 209, 0.5); color: white; padding: 7px; width: 67px; height: 26px;">Signer</div>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
-                                                        <div class="w-100 d-flex" style="height: 100%;">
-                                                            <div class="navbar p-0" style="width: 9.75%; height: 100%; background: #F7F8FA;">
-                                                                <div class="mx-auto my-auto" style="font-size: 7px; min-width: max-content; transform: rotate(-90deg);">Deuxième Jour</div>
-                                                            </div>
-                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%;">
+                                                        <div class="w-100 d-flex position-relative" style="height: 100%;">
+                                                            <div class="navbar p-0" style="min-width: 61px; height: 50%; background: #F7F8FA; align-items: center; text-align: center; position: absolute; left: -15px; top: 15px; bottom: 15px; transform: rotate(-90deg);">
+                                                                <div style="font-size: 7px; min-width: max-content; width: 100%;">Deuxième Jour</div>
+                                                            </div> 
+                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%; position: absolute; right: 0;">
                                                                 <div class="fs-10 text-center mx-auto my-auto" style="border-radius: 5px; background: rgba(209, 209, 209, 0.5); color: white; padding: 7px; width: 67px; height: 26px;">Signer</div>
                                                             </div>
                                                         </div>
                                                     </td>
                                                     <td>
-                                                        <div class="w-100 d-flex" style="height: 100%;">
-                                                            <div class="navbar p-0" style="width: 9.75%; height: 100%; background: #F7F8FA;">
-                                                                <div class="mx-auto my-auto" style="font-size: 7px; min-width: max-content; transform: rotate(-90deg);">Deuxième Jour</div>
-                                                            </div>
-                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%;">
+                                                        <div class="w-100 d-flex position-relative" style="height: 100%;">
+                                                            <div class="navbar p-0" style="min-width: 61px; height: 50%; background: #F7F8FA; align-items: center; text-align: center; position: absolute; left: -15px; top: 15px; bottom: 15px; transform: rotate(-90deg);">
+                                                                <div style="font-size: 7px; min-width: max-content; width: 100%;">Deuxième Jour</div>
+                                                            </div> 
+                                                            <div class="navbar p-0" style="width: 90.25%; height: 100%; position: absolute; right: 0;">
                                                                 <div class="fs-10 text-center mx-auto my-auto" style="border-radius: 5px; background: rgba(209, 209, 209, 0.5); color: white; padding: 7px; width: 67px; height: 26px;">Signer</div>
                                                             </div>
                                                         </div>
