--- a/44.html
+++ b/44.html
@@ -172,7 +172,7 @@
                     <div class="d-flex" style="justify-content: center; align-items: center; height: 100%;"><img src="./img/43/Plus.png" width="20" height="20" style="margin-right: 14px;" /><div class="text-white fs-14">Add New PTW</div></div>
                 </div>
             </nav>
-            <div style="width: 100%; margin-top: 24px; overflow: auto;" id="style-2">
+            <div style="min-width: 955px; width: 100%; margin-top: 24px; overflow: auto;" id="style-2">
                 <table class="tbl-43" id="tbl-44" style="min-width: 955px;">
                     <thead>
                         <tr>
