--- a/44.html
+++ b/44.html
@@ -172,7 +172,7 @@
                     <div class="d-flex" style="justify-content: center; align-items: center; height: 100%;"><img src="./img/43/Plus.png" width="20" height="20" style="margin-right: 14px;" /><div class="text-white fs-14">Add New PTW</div></div>
                 </div>
             </nav>
-            <div style="min-width: 955px; width: 100%; margin-top: 24px; overflow: auto;" id="style-2">
+            <div style="width: 100%; margin-top: 24px; overflow-x: auto; overflow-y:initial;" id="style-2">
                 <table class="tbl-43" id="tbl-44" style="min-width: 955px;">
                     <thead>
                         <tr>
@@ -361,6 +361,104 @@
                                     </div>
                                 </div>
                             </td>
+                            <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #615EFF; padding: 7px; width: 67px; height: 26px; cursor:pointer; display: flex;" data-toggle="modal" data-target="#myModal1"><p class="mx-auto my-auto" style="color: white;">Afficher</p></div></td>
+                            <td style="text-align: right !important;">
+                                <div class="d-flex">
+                                    <div class="dropdown">
+                                        <img src="./img/dashboard/Frame 70.png" class="dropdown-toggle" data-toggle="dropdown" style="margin-right: 22px;" />
+                                        <div class="dropdown-menu ddm-1 p-0">
+                                            <img src="./img/44/Polygon 1.png" width="14" height="14" />
+                                            <div class="ddm-1-data dropdown-item">
+                                                Clôturer
+                                            </div>
+                                            <div class="ddm-1-data dropdown-item" style="border-bottom: none !important;">
+                                                Archiver
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <i class="fa fa-chevron-down fs-12 my-auto" aria-hidden="true"></i>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><input class="checkbox" type="checkbox"></td>
+                            <td class="fs-12 fw-400">245178451</td>
+                            <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #EF3C3C; padding: 7px; width: 67px; height: 26px; display: flex;"><p style="color: white;" class="my-auto mx-auto">Close</p></div></td>
+                            <td class="align-middle"><img src="./img/44/Mask Group.png" style="width: 62px; height: 22px;" /></td>
+                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #008CFF; padding: 7px; width: 67px; height: 26px; display: flex;"><p style="color: white;" class="my-auto mx-auto">One shot</p></div></td>
+                            <td scope="row">
+                                <div class="navbar p-0" style="width: 130px; min-width: 100px;">
+                                    <div>
+                                        <img src="./img/dashboard/Ellipse 4.png" style="border-radius: 50%;" width="26" height="26" />
+                                    </div>
+                                    <div class="mr-auto fs-11">
+                                        &nbsp; Philippe Chaussée
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="fs-12 fw-400">Z01</td>
+                            <td class="fs-12 fw-400">+4</td>
+                            <td class="fs-12 fw-400">Valve 01</td>
+                            <td class="fs-12 fw-400" style="max-width: 232px; min-width: 227px;">Le Lorem Ipsum est simplement du faux texte employé dans la composition .</td>
+                            <td scope="row">
+                                <div class="navbar p-0" style="width: 130px;">
+                                    <div>
+                                        <img src="./img/dashboard/Ellipse 4.png" style="border-radius: 50%;" width="26" height="26" />
+                                    </div>
+                                    <div class="mr-auto fs-11">
+                                        &nbsp; Philippe Chaussée
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #615EFF; padding: 7px; width: 67px; height: 26px; cursor:pointer; display: flex;" data-toggle="modal" data-target="#myModal1"><p class="mx-auto my-auto" style="color: white;">Afficher</p></div></td>
+                            <td style="text-align: right !important;">
+                                <div class="d-flex">
+                                    <div class="dropdown">
+                                        <img src="./img/dashboard/Frame 70.png" class="dropdown-toggle" data-toggle="dropdown" style="margin-right: 22px;" />
+                                        <div class="dropdown-menu ddm-1 p-0">
+                                            <img src="./img/44/Polygon 1.png" width="14" height="14" />
+                                            <div class="ddm-1-data dropdown-item">
+                                                Clôturer
+                                            </div>
+                                            <div class="ddm-1-data dropdown-item" style="border-bottom: none !important;">
+                                                Archiver
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <i class="fa fa-chevron-down fs-12 my-auto" aria-hidden="true"></i>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><input class="checkbox" type="checkbox"></td>
+                            <td class="fs-12 fw-400">245178451</td>
+                            <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #EF3C3C; padding: 7px; width: 67px; height: 26px; display: flex;"><p style="color: white;" class="my-auto mx-auto">Close</p></div></td>
+                            <td class="align-middle"><img src="./img/44/Mask Group.png" style="width: 62px; height: 22px;" /></td>
+                            <td class="align-middle"><div class="fs-10 text-center" style="border-radius: 10px; background: #008CFF; padding: 7px; width: 67px; height: 26px; display: flex;"><p style="color: white;" class="my-auto mx-auto">One shot</p></div></td>
+                            <td scope="row">
+                                <div class="navbar p-0" style="width: 130px; min-width: 100px;">
+                                    <div>
+                                        <img src="./img/dashboard/Ellipse 4.png" style="border-radius: 50%;" width="26" height="26" />
+                                    </div>
+                                    <div class="mr-auto fs-11">
+                                        &nbsp; Philippe Chaussée
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="fs-12 fw-400">Z01</td>
+                            <td class="fs-12 fw-400">+4</td>
+                            <td class="fs-12 fw-400">Valve 01</td>
+                            <td class="fs-12 fw-400" style="max-width: 232px; min-width: 227px;">Le Lorem Ipsum est simplement du faux texte employé dans la composition .</td>
+                            <td scope="row">
+                                <div class="navbar p-0" style="width: 130px;">
+                                    <div>
+                                        <img src="./img/dashboard/Ellipse 4.png" style="border-radius: 50%;" width="26" height="26" />
+                                    </div>
+                                    <div class="mr-auto fs-11">
+                                        &nbsp; Philippe Chaussée
+                                    </div>
+                                </div>
+                            </td>
                             <td class="align-middle"><div class="fs-10" style="border-radius: 10px; background: #615EFF; color: white; padding: 7px; width: 67px; height: 26px; cursor: pointer; display: flex;" data-toggle="modal" data-target="#myModal1"><p class="mx-auto my-auto" style="color: white;">Afficher</p></div></td>
                             <td style="text-align: right !important;">
                                 <div class="d-flex">
@@ -458,27 +556,27 @@
                                         </table>
                                     </div>
                                     <div style="width: 45%; height: auto; display: flex; align-items: center;">
-                                        <div style="margin-left: 26px; height: 123px; border: 1px solid rgba(209, 209, 209, 0.3); width: 0px;"></div>
-                                        <div style="margin-left: 26px; width: 222px; height: 100%;">
+                                        <div style="margin-left: 4.348%; height: 123px; border: 1px solid rgba(209, 209, 209, 0.3); width: 0px;"></div>
+                                        <div style="margin-left: 4.348%; width: 36.957%; height: 100%;">
                                             <div class="w-100 d-flex" style="padding-top: 6px; padding-bottom: 5px;">
-                                                <div style="width: 127px; font-size: 11px; color: #200E32;" class="my-auto">Travail terminé</div>
-                                                <div style="width: 41px; height: 22px; color: #200E32; border: 0.75px solid #D1D1D1; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px; margin-right: 10px;">Oui</div>
-                                                <div style="width: 43px; height: 22px; color: #200E32; border: 0.75px solid #D1D1D1; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px;">Non</div>
+                                                <div style="width: 60%; font-size: 11px; color: #200E32;" class="my-auto">Travail terminé</div>
+                                                <div style="width: 20%; height: 22px; color: #200E32; border: 0.75px solid #D1D1D1; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px; margin-right: 10px;">Oui</div>
+                                                <div style="width: 20%; height: 22px; color: #200E32; border: 0.75px solid #D1D1D1; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px;">Non</div>
                                             </div>
                                             <div class="w-100 d-flex" style="padding-top: 6px; padding-bottom: 5px;">
-                                                <div style="width: 127px; font-size: 11px; color: #200E32;" class="my-auto">Ordonné / Sécurisé</div>
-                                                <div style="width: 41px; height: 22px; color: #615EFF; border: 0.75px solid #615EFF; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px; margin-right: 10px;">Oui</div>
-                                                <div style="width: 43px; height: 22px; color: #200E32; border: 0.75px solid #D1D1D1; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px;">Non</div>
+                                                <div style="width: 60%; font-size: 11px; color: #200E32;" class="my-auto">Ordonné / Sécurisé</div>
+                                                <div style="width: 20%; height: 22px; color: #615EFF; border: 0.75px solid #615EFF; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px; margin-right: 10px;">Oui</div>
+                                                <div style="width: 20%; height: 22px; color: #200E32; border: 0.75px solid #D1D1D1; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px;">Non</div>
                                             </div>
                                             <div class="w-100 d-flex" style="padding-top: 6px; padding-bottom: 5px;">
-                                                <div style="width: 127px; font-size: 11px; color: #200E32;" class="my-auto">Remarques</div>
-                                                <div style="width: 41px; height: 22px; color: #615EFF; border: 0.75px solid #615EFF; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px; margin-right: 10px;">Oui</div>
-                                                <div style="width: 43px; height: 22px; color: #200E32; border: 0.75px solid #D1D1D1; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px;">Non</div>
+                                                <div style="width: 60%; font-size: 11px; color: #200E32;" class="my-auto">Remarques</div>
+                                                <div style="width: 20%; height: 22px; color: #615EFF; border: 0.75px solid #615EFF; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px; margin-right: 10px;">Oui</div>
+                                                <div style="width: 20%; height: 22px; color: #200E32; border: 0.75px solid #D1D1D1; border-radius: 5px; display: flex; justify-content: center; align-items: center; font-size: 9px;">Non</div>
                                             </div>
                                             <div class="w-100" style="margin-top: 6px; width: 221px; height: 76px; border-radius: 5px; border: 1px solid #D1D1D1;"></div>
                                         </div>
-                                        <div style="margin-left: 26px; height: 123px; border: 1px solid rgba(209, 209, 209, 0.3); width: 0px;"></div>
-                                        <div style="margin-left: 26px; width: 325px; height: 100%; border-right: black;">
+                                        <div style="margin-left: 4.348%; height: 123px; border: 1px solid rgba(209, 209, 209, 0.3); width: 0px;"></div>
+                                        <div style="margin-left: 4.348%; width: 45.652%; height: 100%; border-right: black;">
                                             <div class="w-100" style="color: rgba(92, 87, 97, 0.83); font-size: 11px;">Remise du document</div>
                                             <div class="navbar p-0" style="margin-top: 12px;">
                                                 <input type="date" style="width: 46%; height: 31px; font-size: 11px; border-radius: 7px; border: 0.75px solid #D1D1D1; padding: 10px; outline: none;" value="2021-12-02" />
