--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                                 Permis de work
                             </nav>
 
-                            <div class="row m-0" style="margin-right: -22px !important;">
-                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
-                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
+                            <div class="row m-0" style="margin-right: -2% !important;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%; padding-bottom: 26px !important;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1039.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #2697FF;">76</div>
@@ -121,8 +121,8 @@
                                         <div class="fw-400 fs-18" style="width: 131px;">Permis de travail ouvert</div>
                                     </div>
                                 </div>
-                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
-                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%; padding-bottom: 26px !important;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1254.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #FFA113;">35</div>
@@ -131,8 +131,8 @@
                                         <div class="fw-400 fs-18" style="width: 131px;">Permis de travail ouvert</div>
                                     </div>
                                 </div>
-                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
-                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%; padding-bottom: 26px !important;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1257.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #13498A;">21</div>
@@ -141,8 +141,8 @@
                                         <div class="fw-400 fs-18" style="width: 131px;">Permis de travail ouvert</div>
                                     </div>
                                 </div>
-                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
-                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%; padding-bottom: 26px !important;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1260.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #2697FF;">124</div>
@@ -151,8 +151,8 @@
                                         <div class="fw-400 fs-18" style="width: 131px;">Permis de travail ouvert</div>
                                     </div>
                                 </div>
-                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;  height: 162px;">
-                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%;">
+                                <div class="col-lg-2 col-md-4 col-div p-0" style="margin-top: 23px !important;">
+                                    <div class="bg-white" style="width: 90%; border-radius: 10px; padding: 7.282%; height: 100%; padding-bottom: 26px !important;">
                                         <div class="navbar p-0" style="min-width: 136px; width: 100%;">
                                             <img src="./img/dashboard/Group 1261.png" style="margin-right: 22.816%; width: 25.243%;" />
                                             <div class="fw-500 mr-auto my-auto" style="font-size: 33px; line-height: 39px; color: #19E9AA;">124</div>
