--- a/95.html
+++ b/95.html
@@ -39,12 +39,6 @@
                         </button>
                     </div>
                 </div>
-                <div class="d-flex">
-                    <img src="./img/48/Category.png" class="img-fluid my-auto" style="margin-right: 10px; height: 20px; width: auto;" />
-                    <div class="fs-17 my-auto" style="color: #200E32;">
-                        Dashboard
-                    </div>
-                </div>
             </div>
 
             <div>
@@ -88,7 +82,7 @@
                     <div class="pr-3">
                         <img src="./img/95/Stroke 1 (1).png">
                     </div>
-                    <div class="tc-blue fs-17 pt-1">
+                    <div class="tc-blue fs-17 pt-1" style="color: #615EFF;">
                         ID : 287978463
                     </div>
             </div>
@@ -109,13 +103,13 @@
             
             <div class="row m-0" style="padding-left: 4.412%; padding-right: 4.412%;">
                 <nav class="navbar w-100 p-0" style="margin-top: 68px;">
-                    <div style="max-width: 249px;">
+                    <div style="max-width: 20%;">
                         <img class="img-fluid" src="./img/95/logo.png">
                     </div>
                     <div>
                         <p class="fs-27 fw-500">Rapport journalier des travaux</p>
                     </div>
-                    <div style="margin-right: 1.885%;">
+                    <div style="margin-right: 1.885%; max-width: 13%;">
                         <img class="img-fluid" src="./img/95/Vector.png">    
                     </div>
                 </nav>
@@ -233,10 +227,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 p-0" style="display: flex; padding-top: 25px !important; padding-bottom: 25px !important;">
-                                <div style="text-align: center;" class="my-auto">
+                            <div class="col-md-6 p-0 set-height-363" style="display: flex; padding-top: 25px !important; padding-bottom: 25px !important;">
+                                <div style="text-align: center;" class="my-auto w-100">
                                     <img src="./img/95/Group 1182.png" class="img-fluid" />
-                                    <img src="./img/95/Rectangle 64.png" class="img-fluid" style="margin-left: 3.552%; width: 71%;" />
+                                    <img src="./img/95/Rectangle 64.png" style="margin-left: 3.552%; width: 71%; height: fit-content;" />
                                     <img src="./img/95/Group 1180.png" class="img-fluid" style="margin-left: 3.552%;" />
                                 </div>
                             </div>
@@ -253,17 +247,17 @@
                                     <div class="fs-20 fw-500 my-auto mr-auto" style="margin-left: 3.104%;">Difficultes rencontrees</div>
                                 </div>
                                 <div style="width: 87.14%; padding-top: 31px;">
-                                    <ul>
+                                    <ul style="margin-inline-start: -0.7rem !important;">
                                         <li class="pb-3">Absence d'un point d'eau</li>
                                         <li class="pb-3">Absence d'un chapelle electrique</li>
                                         <li class="pb-3">Livraison tardive des briques</li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-6 p-0" style="display: flex; padding-top: 25px !important; padding-bottom: 25px !important;">
-                                <div style="text-align: center;" class="my-auto">
+                            <div class="col-md-6 p-0 set-height-363" style="display: flex; padding-top: 25px !important; padding-bottom: 25px !important;">
+                                <div style="text-align: center;" class="my-auto w-100">
                                     <img src="./img/95/Group 1182.png" class="img-fluid" />
-                                    <img src="./img/95/Rectangle 64.png" class="img-fluid" style="margin-left: 3.552%; width: 71%;" />
+                                    <img src="./img/95/Rectangle 64.png" style="margin-left: 3.552%; width: 71%; height: fit-content;" />
                                     <img src="./img/95/Group 1180.png" class="img-fluid" style="margin-left: 3.552%;" />
                                 </div>
                             </div>
@@ -280,17 +274,17 @@
                                     <div class="fs-20 fw-500 my-auto mr-auto" style="margin-left: 3.104%;">Taches prevues demain</div>
                                 </div>
                                 <div style="width: 87.14%; padding-top: 31px;">
-                                    <ul>
+                                    <ul style="margin-inline-start: -0.7rem !important;">
                                         <li class="pb-3">Installation de chantier</li>
                                         <li class="pb-3">Montage du chapiteau</li>
                                         <li class="pb-3">Installation des dalles de sol</li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-6 p-0" style="display: flex; padding-top: 25px !important; padding-bottom: 25px !important;">
-                                <div style="text-align: center;" class="my-auto">
+                            <div class="col-md-6 p-0 set-height-363" style="display: flex; padding-top: 25px !important; padding-bottom: 25px !important;">
+                                <div style="text-align: center;" class="my-auto w-100">
                                     <img src="./img/95/Group 1182.png" class="img-fluid" />
-                                    <img src="./img/95/Rectangle 64.png" class="img-fluid" style="margin-left: 3.552%; width: 71%;" />
+                                    <img src="./img/95/Rectangle 64.png" style="margin-left: 3.552%; width: 71%; height: fit-content;" />
                                     <img src="./img/95/Group 1180.png" class="img-fluid" style="margin-left: 3.552%;" />
                                 </div>
                             </div>
